--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
-server.port=8080
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/pg_service_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database=postgresql
-
-server.error.include-message=always
+spring.cassandra.keyspace-name=chat
+spring.cassandra.contact-points=172.0.0.1
+spring.cassandra.port=9042
+spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+spring.cassandra.local-datacenter=datacenter1
