--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         - name: Grant execute permission for gradlew
           run: chmod +x gradlew
         - name: Build with Gradle
-          run: ./gradlew build -x test
+          run: ./gradlew build -x test --scan
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -37,4 +37,4 @@ jobs:
           distribution: 'temurin'
           cache: gradle
       - name: Tests
-        run: ./gradlew clean test --warning-mode all
+        run: ./gradlew test --warning-mode all --scan
