--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: html-reports
-          path: ./build/reports/**/*.html
+          path: ./build/reports/*
