--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,28 +13,34 @@ jobs:
       runs-on: ubuntu-latest
 
       steps:
-        - uses: actions/checkout@v3
-        - name: Set up JDK 17
-          uses: actions/setup-java@v3
+        - uses: actions/checkout@v4
+        - name: Set up JDK 21
+          uses: actions/setup-java@v4
           with:
-            java-version: '17'
+            java-version: '21'
             distribution: 'temurin'
             cache: gradle
         - name: Grant execute permission for gradlew
           run: chmod +x gradlew
         - name: Build with Gradle
-          run: ./gradlew build
+          run: ./gradlew build -x test --scan
   test:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
       - name: Tests
-        run: ./gradlew clean test --warning-mode all
+        run: ./gradlew test --warning-mode all --scan
+      - name: Upload Gradle HTML Reports
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-reports
+          path: ./build/reports/*
